feat: Update configuration for API connection and enhance ACL handling

--- a/.env.template
+++ b/.env.template
@@ -104,17 +104,18 @@ ADMIN_PORT=8888
 ADMIN_USER=admin
 ADMIN_PASS=admin
 
-# FreeSWITCH ESL Connection (admin connects to FS via ESL)
+# API Connection (internal communication)
+APIKEY=ClueCon
+API_PORT=8021
 FS_HOST=127.0.0.1
-FS_PORT=8021
-FS_PASS=ClueCon
 
-# IP-based access control for FS commands
-# 127.0.0.1 = localhost only (default, secure)
-# 0.0.0.0 = allow all (only use behind firewall!)
+# IP-based access control
+# 0.0.0.0 = allow all (default in Docker)
+# 127.0.0.1 = localhost only
 # 192.168.1.0/24 = allow subnet
-# 10.0.0.5,10.0.0.6 = specific IPs
-FS_ALLOWED_IPS=127.0.0.1
+# 10.0.0.5,10.0.0.6 = specific IPs (comma-separated)
+# IPv4, IPv6, DNS names supported
+API_ACL=0.0.0.0
 
 ################################################################################
 # OPTIONAL SETTINGS
